--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/Instagram_logo_2022.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script
+            async
+            defer
+            crossorigin="anonymous"
+            src="https://connect.facebook.net/en_US/sdk.js"
+        ></script>
+
         <link
             rel="stylesheet"
             href="https://site-assets.fontawesome.com/releases/v6.1.2/css/all.css?fbclid=IwAR2TXqBPR1BwetsIfkcLDjYfw2kuhlxqmjkGdzKaCdAd6NkAkWniljGiVB8"
@@ -12,6 +19,30 @@
     </head>
     <body>
         <div id="root"></div>
+        <script>
+            window.fbAsyncInit = function () {
+                FB.init({
+                    appId: "1212736950597008",
+                    cookie: true,
+                    xfbml: true,
+                    version: "v2.7",
+                });
+
+                FB.AppEvents.logPageView();
+            };
+
+            (function (d, s, id) {
+                var js,
+                    fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) {
+                    return;
+                }
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "https://connect.facebook.net/en_US/sdk.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            })(document, "script", "facebook-jssdk");
+        </script>
         <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
